--- a/src/styles/sassConfig.scss
+++ b/src/styles/sassConfig.scss
@@ -1,8 +1,18 @@
 $color-main: #34393f;
+
+/*属性前端*/
 @mixin webkit($type, $value) {
   -webkit-#{$type}: $value;
   -moz-#{$type}: $value;
   -ms-#{$type}: $value;
   -o-#{$type}: $value;
+  #{$type}: $value;
+}
+
+@mixin webkitA($type, $value) {
+  #{$type}: -webkit-#{$value};
+  #{$type}: -moz-#{$value};
+  #{$type}: -ms-#{$value};
+  #{$type}: -o-#{$value};
   #{$type}: $value;
 }
