--- a/src/views/cars/index.scss
+++ b/src/views/cars/index.scss
@@ -10,7 +10,7 @@
   width: 505px;
   height: 257px;
   margin: auto;
-  padding: 30px;
+  padding: 30px 30px 0;
   border-radius: 24px;
   background-color: white;
   @include webkit(box-shadow, 0 0 18px 0 rgba(0, 0, 0, .2));
@@ -19,7 +19,8 @@
   header {
     display: flex;
 
-    h4, p {
+    h4,
+    p {
       flex: 1;
     }
   }
@@ -32,12 +33,106 @@
     margin-right: 10px;
     vertical-align: middle;
   }
-  .name{
+
+  .name {
     font-size: 16px;
   }
 }
-.cars-attr{
+
+.cars-attr {
   text-align: right;
   opacity: .5;
   line-height: 34px;
+}
+
+.cars-content {
+  position: relative;
+  margin: 11px 0 7px;
+  height: 120px;
+
+  // @extend %clearfix; 
+  img {
+    float: right;
+    height: 120px;
+  }
+
+  .info {
+    display: flex;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+
+  .cars-number {
+    font-size: 18px;
+  }
+
+  .cars-power {
+    padding-top: 10px;
+    display: inline-block;
+
+    li {
+      display: inline-block;
+      width: 7px;
+      height: 24px;
+      margin-left: 3px;
+      border-radius: 100px;
+      background-color: #e1e1e1;
+    }
+
+    @for $i from 1 through 10 {
+      &.active-li-#{$i} {
+        li:nth-child(-n+#{$i}) {
+          @include webkitA(background, linear-gradient(#41b8fb, #0b8bd9));
+        }
+      }
+    }
+
+    // .active {
+    //   @include webkitA(background, linear-gradient(#41b8fb, #0b8bd9));
+    // }
+
+  }
+
+  .distance {
+    margin-left: 5px;
+    display: inline-block;
+
+    strong {
+      margin: 0 5px;
+      font-size: 22px;
+    }
+
+    sub {
+      position: relative;
+      top: -2px;
+    }
+
+    sub:first-of-type {
+      opacity: 0.8;
+    }
+  }
+}
+.parking-link{
+  position: relative;
+  display: block;
+  border-top: 1px solid #e1e1e1;
+  color: $color-main;
+  opacity: .8;
+  line-height: 53px;
+  &:after{
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 8px;
+    height: 8px;
+    margin-top: -8px;
+    border-top: 1px solid #d6d7d9;
+    border-right: 1px solid #d6d7d9;
+    @include webkit(transform,rotate(45deg));
+  }
 }
