--- a/src/styles/sassConfig.scss
+++ b/src/styles/sassConfig.scss
@@ -1,5 +1,19 @@
 $color-main: #34393f;
+$color-blue: #00a3ff;
 
+/**
+清除浮动
+ */
+%clearfix{
+  &:after{
+  clear: both;
+    content: "";
+    display: block;
+    height: 0;
+    line-height: 0;
+    overflow: hidden;
+  }
+}
 /*属性前端*/
 @mixin webkit($type, $value) {
   -webkit-#{$type}: $value;
