--- a/src/views/cars/index.scss
+++ b/src/views/cars/index.scss
@@ -1,4 +1,4 @@
-.index-wrap {
+.cars-wrap {
   position: fixed;
   left: 0px;
   right: 0px;
@@ -6,133 +6,62 @@
   z-index: 11;
 }
 
-.cars-item {
-  width: 505px;
-  height: 257px;
-  margin: auto;
-  padding: 30px 30px 0;
-  border-radius: 24px;
-  background-color: white;
-  @include webkit(box-shadow, 0 0 18px 0 rgba(0, 0, 0, .2));
-  @include webkit(box-sizing, border-box);
-
-  header {
-    display: flex;
-
-    h4,
-    p {
-      flex: 1;
-    }
-  }
-}
-
-.cars-logo {
-  img {
-    display: inline-block;
-    height: 34px;
-    margin-right: 10px;
-    vertical-align: middle;
-  }
-
-  .name {
-    font-size: 16px;
-  }
-}
-
-.cars-attr {
-  text-align: right;
-  opacity: .5;
-  line-height: 34px;
-}
-
-.cars-content {
+.cars-swiper-wrap {
   position: relative;
-  margin: 11px 0 7px;
-  height: 120px;
-
-  // @extend %clearfix; 
-  img {
-    float: right;
-    height: 120px;
-  }
-
-  .info {
-    display: flex;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-  }
-
-  .cars-number {
-    font-size: 18px;
-  }
-
-  .cars-power {
-    padding-top: 10px;
-    display: inline-block;
-
-    li {
-      display: inline-block;
-      width: 7px;
-      height: 24px;
-      margin-left: 3px;
-      border-radius: 100px;
-      background-color: #e1e1e1;
+  padding: 0 155px;
+  .swiper-container{ overflow: inherit;}
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 60px;
+    height: 100px;
+    border-radius: 100px;
+    background-color: #fff;
+    outline: none;
+    @include webkit(box-shadow, 0 0 18px 0 rgba(0, 0, 0, .2));
+    @include webkit(transition, all .3s ease 0s);
+    &.swiper-button-disabled {
+      opacity: 1;
     }
+    &:hover {
+      background-color: $color-main;
+    }
+  }
 
-    @for $i from 1 through 10 {
-      &.active-li-#{$i} {
-        li:nth-child(-n+#{$i}) {
-          @include webkitA(background, linear-gradient(#41b8fb, #0b8bd9));
-        }
+  .swiper-button-prev {
+    left: 53px;
+    &:after {
+      content: "";
+      width: 14px;
+      height: 14px;
+      margin-left: 5px;
+      border-left: 3px solid black;
+      border-top: 3px solid black;
+      @include webkit(transform, rotate(-45deg));
+    }
+    &:hover {
+      &:after {
+        border-left: 3px solid $color-blue;
+        border-top: 3px solid $color-blue;
       }
     }
-
-    // .active {
-    //   @include webkitA(background, linear-gradient(#41b8fb, #0b8bd9));
-    // }
-
   }
 
-  .distance {
-    margin-left: 5px;
-    display: inline-block;
-
-    strong {
-      margin: 0 5px;
-      font-size: 22px;
+  .swiper-button-next {
+    right: 53px;
+    &:after {
+      content: "";
+      width: 14px;
+      height: 14px;
+      margin-right: 5px;
+      border-right: 3px solid black;
+      border-top: 3px solid black;
+      @include webkit(transform, rotate(45deg));
     }
-
-    sub {
-      position: relative;
-      top: -2px;
+    &:hover {
+      &:after {
+        border-right: 3px solid $color-blue;
+        border-top: 3px solid $color-blue;
+      }
     }
-
-    sub:first-of-type {
-      opacity: 0.8;
-    }
-  }
-}
-.parking-link{
-  position: relative;
-  display: block;
-  border-top: 1px solid #e1e1e1;
-  color: $color-main;
-  opacity: .8;
-  line-height: 53px;
-  &:after{
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: 0;
-    width: 8px;
-    height: 8px;
-    margin-top: -8px;
-    border-top: 1px solid #d6d7d9;
-    border-right: 1px solid #d6d7d9;
-    @include webkit(transform,rotate(45deg));
   }
 }
